# AtlasIQ

./: .env.example  .gitignore  CITATION_FIX_SUMMARY.md  CODE_REVIEW_CHECKLIST.md  COMMIT_SUMMARY.md  CONFIDENCE_FIX_FINAL.md  CORRECT_STARTUP_GUIDE.md  Dockerfile  FIXES_SUMMARY.md  FRONTEND_IMPROVEMENTS_SUMMARY.md  GET_NVIDIA_API_KEY.md  GIT_COMMIT_SUMMARY.md  GPU_SETUP_COMPLETE.md  HOW_TO_VERIFY_GPU.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LOGO_FIX_SUMMARY.md  NEXT_STEPS.md  PRODUCTION_READINESS_REPORT.md  QUICK_START.md  QUICK_START_GUIDE.md  README.md  REMAINING_ISSUES_FIX_REPORT.md  ROOT_CAUSE_AND_FIX_REPORT.md  SERVICES_STATUS.md  START_PROJECT.md  STREAMLIT_REMOVAL_REPORT.md  agent.md  docker-compose.yml  project_context.md  pyproject.toml  start_atlasiq.py
Stitch_design/: code.html  code2.html  code3.html  design3.md
atlasiq/: __init__.py
atlasiq/analytics/: __init__.py
atlasiq/backend/: __init__.py  main.py
atlasiq/backend/api/: __init__.py  routes_health.py  routes_ingestion.py  routes_query.py
atlasiq/backend/core/: __init__.py  config.py  dependencies.py  exceptions.py  logging.py  startup.py
atlasiq/backend/domain/: __init__.py  chunk.py  document.py
atlasiq/backend/models/: __init__.py
atlasiq/backend/repositories/: __init__.py  document_repository.py  vector_repository.py
atlasiq/backend/services/: __init__.py
atlasiq/database/: __init__.py  postgres_client.py  qdrant_client.py  schema.sql
atlasiq/evaluation/: __init__.py
atlasiq/frontend/: README.md  __init__.py  app.py  serve.py
atlasiq/frontend/static/: index.html
atlasiq/ingestion/: __init__.py  change_detector.py  chunker.py  embedder.py  metadata.py  parser.py  pipeline.py  validator.py  watcher.py
atlasiq/retrieval/: __init__.py  bm25_retriever.py  citations.py  dense_retriever.py  generator.py  guardrails.py  hybrid_retriever.py  models.py  prompt_builder.py  protocols.py  qa_pipeline.py
atlasiq/retrieval/llm/: __init__.py  base.py  factory.py  mock_provider.py  nvidia_provider.py  ollama_provider.py
configs/: default.yaml
docs/: ARCHITECTURAL_DECISIONS.md  CODING_STYLE.md  DECISION_LOG.md  DEFINITION_OF_DONE.md  DEVELOPMENT_ORDER.md  ENGINEERING_GUIDELINES.md  EXECUTION_PLAN_M1.md  KNOWN_CHALLENGES.md  MILESTONES.md  PROJECT_CONTEXT.md  PROJECT_DIFFERENTIATORS.md  PROJECT_SCOPE.md  WORKFLOW.md  design_doc.md
prompts/: citation_prompt.txt  qa_prompt.txt  system_prompt.txt
scripts/: run_watcher.py  smoke_retrieval.py
tests/: __init__.py  analyze_scores.py  audit_retrieval_quality.py  capture_diagnostic_logs.py  clear_cache_and_test.py  diagnose_retrieval.py  fast_audit.py  production_validation_test.py  quick_audit.py  test_backend.py  test_bm25_retriever.py  test_cache_invalidation.py  test_change_detector.py  test_chunker.py  test_citation_fix.py  test_citations.py  test_collections.py  test_dense_retriever.py  test_document_repository.py  test_domain_models.py  test_embedder.py  test_filtered_query.py  test_frontend_changes.py  test_generator.py  test_guardrails.py  test_hybrid_retriever.py  test_ingestion_api.py  test_ingestion_question.py  test_integration_ingestion.py  test_llm_provider.py  test_metadata.py  test_nvidia_free_models.py  test_nvidia_integration.py  test_nvidia_latest_models.py  test_parser.py  test_pipeline.py  test_prompt_builder.py  test_qa_pipeline.py  test_query_api.py  test_query_validation.py  (+5 more)
