[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlasiq"
version = "1.0.0"
description = "Enterprise Knowledge Platform — continuous ingestion, hybrid retrieval, evidence-backed answers."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Verdhan Yash"},
]

dependencies = [
    # Backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",

    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",

    # Vector Database
    "qdrant-client>=1.11.0",

    # Document Parsing
    "docling>=2.0.0",

    # Embeddings & Reranking
    "sentence-transformers>=3.0.0",

    # BM25
    "rank-bm25>=0.2.2",

    # LLM Providers
    "httpx>=0.27.0",
    "openai>=1.40.0",

    # Folder Watching
    "watchdog>=4.0.0",

    # Frontend
    "streamlit>=1.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["atlasiq"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
